# gst-rerunsink

./: CMakeLists.txt  README.md  rerun_sdk.patch
examples/: README.md  simple_pipeline.cpp
src/: gstrerunsink.cpp  gstrerunsink.hpp
tests/: test_mysink.cpp
